<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools">

    <!--<PreferenceCategory android:title="@string/settings_cate_title_donate">-->
        <!---->
    <!--</PreferenceCategory>-->

    <PreferenceCategory android:title="@string/settings_cate_title_general">

        <SwitchPreference
            android:key="pref_mod_active"
            android:title="@string/settings_pref_title_mod_status"
            android:defaultValue="false"
            android:summaryOn="@string/settings_summary_on_mod_status"
            android:summaryOff="@string/settings_summary_off_mod_status"/>

        <com.rong.xposed.headsoff.widget.SwitchPreferenceMultiLine
            android:key="pref_global_enable"
            android:title="@string/settings_pref_title_global_switch"
            android:summaryOn="@string/settings_summary_on_global_switch"
            android:summaryOff="@string/settings_summary_off_global_switch"
            android:defaultValue="false"
            tools:defaultValue="true"/>

        <SwitchPreference
            android:key="pref_show_system_app"
            android:title="@string/settings_pref_title_show_system_apps"
            android:defaultValue="false"
            android:summaryOn="@string/settings_summary_on_show_system_apps"
            android:summaryOff="@string/settings_summary_off_show_system_apps"/>

        <SwitchPreference
            android:key="pref_log"
            android:title="@string/settings_pref_title_enable_log"
            android:defaultValue="false"
            android:summaryOn="@string/settings_summary_on_enable_log"
            android:summaryOff="@string/settings_summary_off_enable_log"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_cate_title_ack">

        <Preference
            android:key="pref_thanks_to_xposed"
            android:title="@string/settings_pref_title_ack_xposed"
            android:summary="@string/settings_summary_ack_xposed"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_cate_title_about">

        <Preference
            android:key="pref_download"
            android:title="@string/settings_pref_title_download"/>

        <Preference
            android:key="pref_dev"
            android:title="@string/settings_pref_title_developer"
            android:summary="@string/app_dev"/>

        <Preference
            android:key="pref_version_name"
            android:title="@string/settings_pref_title_version_name"
            tools:summary="1.0.0.1"/>

        <Preference
            android:key="pref_copyright"
            android:title="@string/settings_pref_title_copyright"
            android:summary="@string/app_copyright"/>

    </PreferenceCategory>


</PreferenceScreen>
